--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,29 @@
 ---
-
+import Banner from "./components/banner.astro";
+import Navbar from "./components/navbar.astro";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
+<html lang="en" class="scroll-smooth">
+  <head>
+    <meta charset="utf-8" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/favicon.svg"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width"
+    />
+    <meta
+      name="generator"
+      content={Astro.generator}
+    />
+    <title>Jason's Portfolio</title>
+  </head>
+  <body class="bg-gray-900 text-bone">
+    <Navbar />
+    <Banner goto="#after"/>
+    <h1 id="after"> after here</h1>
+  </body>
 </html>
