--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -3,7 +3,7 @@ const email = "jason.ly027@gmail.com";
 ---
 
 <nav class="shadow-lg bg-darkp h-14 items-center px-4 flex sticky z-10 top-0">
-  <h1 class="font-semibold text-xl select-none">Portfolio</h1>
+  <h1 class="font-semibold text-xl">Jason's Portfolio</h1>
   <div class="flex-1"></div>
   <a
     href="https://github.com/jasonly027"
@@ -13,7 +13,7 @@ const email = "jason.ly027@gmail.com";
   >
     <svg
       xmlns="http://www.w3.org/2000/svg"
-      class="fill-bone hover:fill-gray-400 size-7"
+      class="fill-current hover:fill-gray-400 size-7"
       viewBox="0 0 98 96"
       ><path
         fill-rule="evenodd"
