--- a/src/components/projects.astro
+++ b/src/components/projects.astro
@@ -1,16 +1,37 @@
 ---
+import { getCollection, type CollectionEntry } from "astro:content";
+import { Image } from "astro:assets";
+import ProjectCard from "./ProjectCard.tsx";
+
 interface Props {
   id?: string;
 }
 
 const { id } = Astro.props;
+
+const projects: CollectionEntry<"projects">[] = await getCollection("projects");
 ---
 
-<div
+<section
   id={id}
-  class="w-full h-[calc(100vh-3.5rem)] bg-darkp p-8"
+  class="w-full min-h-[calc(100vh-3.5rem)] bg-darkp p-8 flex flex-col items-center"
 >
-  <section>
-    <h1 class="text-center text-3xl sm:text-4xl font-medium tracking-wide">Projects</h1>
-  </section>
-</div>
+  <h1 class="text-center text-3xl font-medium tracking-wide">Projects</h1>
+  <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 my-8 w-full max-w-[85%]">
+    {
+      projects.map((project) => (
+        <ProjectCard
+          client:visible
+          project={project.data}
+        >
+          <Image
+            src={project.data.image.src}
+            alt={project.data.image.alt}
+            class="object-cover object-top w-full h-full"
+          />
+        </ProjectCard>
+      ))
+    }
+  </div>
+</section>
+
