--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
-import Banner from "../components/banner.astro";
-import Navbar from "../components/navbar.astro";
-import Projects from "../components/projects.astro";
+import Banner from "../components/Banner.astro";
+import Navbar from "../components/Navbar.astro";
+import Projects from "../components/Projects.astro";
 ---
 
 <html
