--- a/src/components/projects.astro
+++ b/src/components/projects.astro
@@ -14,24 +14,24 @@ const projects: CollectionEntry<"projects">[] = await getCollection("projects");
 
 <section
   id={id}
-  class="w-full min-h-[calc(100vh-3.5rem)] bg-darkp p-8 flex flex-col items-center"
+  class="flex min-h-[calc(100vh-3.5rem)] w-full flex-col items-center p-8"
 >
   <h1 class="text-center text-3xl font-medium tracking-wide">Projects</h1>
-  <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 my-8 w-full max-w-[85%]">
+  <div
+    class="my-8 grid w-11/12 max-w-[65rem] grid-cols-1 gap-12 sm:grid-cols-2"
+  >
     {
       projects.map((project) => (
-        <ProjectCard
-          client:visible
-          project={project.data}
-        >
+        <ProjectCard client:visible project={project.data}>
           <Image
             src={project.data.image.src}
             alt={project.data.image.alt}
-            class="object-cover object-top w-full h-full"
+            format="webp"
+            class="h-full w-full object-cover object-top"
+            draggable="false"
           />
         </ProjectCard>
       ))
     }
   </div>
 </section>
-
