--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,28 +4,19 @@ import Navbar from "../components/Navbar.astro";
 import Projects from "../components/Projects.astro";
 ---
 
-<html
-  lang="en"
-  class="scroll-smooth"
->
+<html lang="en" class="scroll-smooth">
   <head>
     <meta charset="utf-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="/favicon.svg"
-    />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
     <meta
-      name="viewport"
-      content="width=device-width"
-    />
-    <meta
-      name="generator"
-      content={Astro.generator}
+      name="description"
+      content="A portfolio website showcasing projects"
     />
     <title>Jason's Portfolio</title>
   </head>
-  <body class="bg-gray-900 text-bone">
+  <body class="bg-darkp text-bone">
     <Navbar class="sticky" />
     <Banner goto="#projects" />
     <Projects id="projects" />
