--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import Projects from "../components/Projects.astro";
     <meta name="generator" content={Astro.generator} />
     <meta
       name="description"
-      content="A portfolio website showcasing projects"
+      content="My portfolio website showcasing projects"
     />
     <title>Jason's Portfolio</title>
   </head>
