--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,5 @@
 ---
-import Banner from "../components/Banner.astro";
-import Navbar from "../components/Navbar.astro";
-import Projects from "../components/Projects.astro";
+import "../styles/global.css"
 ---
 
 <html lang="en" class="scroll-smooth">
@@ -16,9 +14,5 @@ import Projects from "../components/Projects.astro";
     />
     <title>Jason's Portfolio</title>
   </head>
-  <body class="bg-darkp text-bone">
-    <Navbar class="sticky" />
-    <Banner goto="#projects" />
-    <Projects id="projects" />
-  </body>
+  <body class=""></body>
 </html>
