--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,18 +1,23 @@
 ---
-import "../styles/global.css"
+import { getCollection } from 'astro:content';
+import BaseLayout from '../layouts/BaseLayout.astro';
+import ProjectCard from '../components/ProjectCard.astro';
+
+const description = 'Showcasing some of my recent programming projects.';
+
+const projects = (await getCollection('projects')).sort(
+  (a, b) => b.data.releaseDate.getTime() - a.data.releaseDate.getTime(),
+);
 ---
 
-<html lang="en" class="scroll-smooth">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg?" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <meta
-      name="description"
-      content="My portfolio website showcasing projects"
-    />
-    <title>Jason's Portfolio</title>
-  </head>
-  <body class=""></body>
-</html>
+<BaseLayout title="Projects" description={description}>
+  <div class="mb-4 flex flex-col items-center gap-4 px-2 py-1">
+    <header
+      class="border-surface hover:border-primary mt-2 rounded-md border-2 p-4 transition-colors"
+    >
+      <h1 class="mb-2 text-4xl font-bold tracking-wide">Projects</h1>
+      <p class="text-muted tracking-wide">{description}</p>
+    </header>
+    {projects.map((project) => <ProjectCard project={project} />)}
+  </div>
+</BaseLayout>
