--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,4 +1,5 @@
 ---
+import AnimatedBackground from '../components/AnimatedBackground.astro';
 import BaseHead from '../components/BaseHead.astro';
 import NavBar from '../components/NavBar.astro';
 import '../styles/global.css';
@@ -16,6 +17,7 @@ const { title, description } = Astro.props;
     <BaseHead title={title} description={description} />
   </head>
   <body>
+    <AnimatedBackground />
     <NavBar />
     <main>
       <slot />
