--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -13,7 +13,7 @@ const title = `${siteName} - ${subtitle}`;
 const canonicalUrl = new URL(Astro.url.pathname, Astro.site);
 ---
 
-<link rel="icon" type="image/svg+xml" href="favicon.svg?" />
+<link rel="icon" type="image/svg+xml" href="icon.svg?" />
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width" />
 <meta name="generator" content={Astro.generator} />
